<resources>
    <string name="app_name">Visory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landing">This is Main Landing Page</string>
    <string name="button_volunteer">I am a volunteer</string>
    <string name="button_blind">I am blind or visually impaired</string>
    <string name="button_volunteer_cd">Sign up as a volunteer</string>
    <string name="button_blind_cd">Sign up as a visually impaired or blind</string>
    <string name="introduction_text">Small acts of kindness with global impact</string>
    <string name="introduction_image">Image of children standing around the globe</string>
    <string name="welcome_blind_text">The Visory app connects you with a sighted volunteer or company representative. Using live video chat, this person can assist with visual tasks or describe things that you’d like to see.</string>
    <string name="welcome_volunteer_text">The Visory lets you lend your eyesight to people who need it. Sign up, join our global network and make a big difference in the everyday lives of people without sight all over the world.</string>
    <string name="welcome_blind_header">Visually Impaired</string>
    <string name="welcome_volunteer_header">Sighted Volunteer</string>
    <string name="label_volunteer">Volunteer</string>
    <string name="label_bvi">Visually Impaired</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_login_cd">Login with your existing account</string>
    <string name="button_register_cd">Create a new account</string>
    <string name="text_or">OR</string>
    <string name="text_continue_facebook">Continue with Facebook</string>
    <string name="text_continue_google">Continue with Google</string>
    <string name="login_button">Login</string>
    <string name="forgot_password_button">Forgot your password?</string>
    <string name="login_password">Password</string>
    <string name="login_email">Email</string>
    <string name="button_register_submit">Register</string>
    <string name="hint_fname">First Name</string>
    <string name="hint_lname">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_pass_button_submit">Reset Password</string>
    <string name="text_forgot_pass">Enter your email below and we will send you a reset link to your email.</string>
    <string name="forgot_back_button_submit">Back</string>
    <string name="text_verify_email">Please verify your email to continue</string>
    <string name="button_verify_resend">Resend Email</string>
    <string name="button_verify">Completed</string>
    <string name="text_check_email">Check your email for verification link.</string>
    <string name="image_landing_actions">Image of a person holding a phone</string>
    <string name="image_closed_email">Closed Email</string>
    <string name="make_call_cd">Make a call to a volunteer</string>
    <string name="button_make_call">Call a volunteer</string>
    <string name="button_emergency">Emergency</string>
    <string name="text_about_header">Community Stories</string>
    <string name="text_about_content">Compelling stories, in-depth interviews and more will be updated weekly in our new Stories section.
                                        Here, we showcase the unique community of Visory and aim to inform, help and inspire community members.</string>
    <string name="text_about_content1">Stories are currently only available in English.</string>
    <string name="text_permission_volunteer_body">Please give access to your microphone and video for a smooth conversation.</string>
    <string name="text_permission_volunteer_header">Microphone and Video</string>
    <string name="button_grant_access">Grant Access</string>
    <string name="image_permission_cd">Allow video and microphone access</string>
    <string name="button_welcome_continue">Continue</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="welcome_body2_volunteer">Helping is easy. Your phone is open for calls as long as you\'\re logged in.</string>
    <string name="welcome_body2_blind">Start your first call now!</string>
    <string name="title_home">Home</string>
    <string name="welcome_body_text1">"We are happy to have you on board."</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_stories">Stories</string>
    <string name="label_volunteer_login">Volunteer Login</string>
    <string name="label_bvi_login">Visually Impaired Login</string>
    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="bottom_nav_text_home">Home</string>
    <string name="bottom_nav_text_stories">Stories</string>
    <string name="text_check_email_instructions">Open the link in your email and then click the completed button.</string>
    <string name="label_welcome">Welcome</string>
    <string name="label_verify_email">Verify Email</string>
    <string name="facebook_application_id" translatable="false">2166494143644760</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2166494143644760</string>
    <string name="facebook_login_client_token" translatable="false">16da63c435162fb8c57b9103ae2af316</string>
    <string name="text_menu_about">About</string>
    <string name="image_about">Happy kids</string>
    <string name="text_signup_google">Sign up with Google</string>
    <string name="text_signup_facebook">Sign up with Facebook</string>
    <string name="text_signin_facebook">Sign in with Facebook</string>
    <string name="text_signin_google">Sign in with Google</string>
    <string name="button_object_detector">Object Detector</string>
    <string name="error_qb_credentials_empty">Error updating User, please try again</string>
    <string name="splash_app_version">v %s</string>
    <string name="text_learn_to_answer_calls">Learn to answer calls</string>
    <string name="text_blind_location_help">Help Blind Person by Location</string>
    <string name="text_trivia_game">Trivia Game</string>
    <string name="text_notification_call">You will receive a notification when you get a call.</string>
    <string name="default_name">No Name</string>
    <string name="default_date">Member since 17th November 2019</string>
    <string name="default_language">English</string>
    <string name="profile_img_cd">Profile image</string>
    <string name="provider_email">email</string>
    <string name="provider_fb">fb</string>
    <string name="provider_google">google</string>
    <string name="taruc_logo">TARUC Logo</string>
    <string name="qb_new_user">Creating new user…</string>
    <string name="snackbar_retry">Retry</string>
    <string name="qb_connection_error">Connection failed. Please check your internet connection.</string>
    <string name="qb_connection_timeout">No response received within reply timeout</string>
    <string name="qb_no_connection">No internet connection</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="check_connection">Please check your internet connection</string>
    <string name="hang_up_call">Hang up</string>
    <string name="notification_title">A visually impaired person needs your help</string>
    <string name="notification_text_calling">Touch takes you to the call</string>
    <string name="notification_text_bvi">Volunteer is waiting for you!</string>
    <string name="notification_text">Touch takes you back to the call %1$s</string>
    <string name="pref_manage_speakerphone_by_proximity_key">manage_speakerphone_by_proximity_preference</string>
    <string name="pref_manage_speakerphone_by_proximity_default">false</string>
    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
    <string name="pref_dialing_time_interval_default_value">5</string>
    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Default audio codec</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Select default audio codec</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Frame Rate (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video Format</string>
    <string name="pref_resolution_dlg">Enter RTC local video resolution</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Bandwidth (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="lost_connection">Connection was lost</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="error_permission_video">You should allow Camera permission</string>
    <string name="error_permission_audio">You should allow Microphone permission</string>
    <string name="dlg_allow">Allow</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="calling">Calling a volunteer</string>
    <string name="opponent_pending">Pending</string>
    <string name="call_end_header">We hope you received the help you needed.</string>
    <string name="call_end_body">If you had any problems with your call, please let us know.</string>
    <string name="cd_bvi_report">I have problems with my call</string>
    <string name="cd_bvi_done">Close the call</string>
    <string name="button_bvi_done">Done</string>
    <string name="button_bvi_report">Report</string>
    <string name="version">Version</string>
    <string name="version_number">1.0-alpha</string>
    <string name="btnDonate">Donate</string>
    <string name="radRM1">RM 1</string>
    <string name="radRM5">RM 5</string>
    <string name="radRM10">RM 10</string>
    <string name="lblHowManyYouWantToDonateRM">How much you want to donate (RM)?</string>
    <string name="hintPleaseEnterAmountToDonate">Please enter donate amount</string>
    <string name="app_version_cd">Visory application version</string>
    <string name="forgot_password_button_cd">Reset your password</string>
    <string name="login_button_submit_cd">Login to your account</string>
    <string name="button_facebook_login_cd">Login with your Facebook account</string>
    <string name="button_google_login_cd">Login with your Google account</string>
</resources>