<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FragmentBackground"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/login_form"
            style="@style/ScrollViewChild"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_facebook"
                style="@style/ButtonStyle.Primary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xsm"
                android:background="@drawable/facebook_style"
                android:drawableStart="@drawable/facebook_icon"
                android:paddingStart="20dip"
                android:paddingEnd="20dip"
                android:text="@string/text_signin_facebook"
                android:contentDescription="@string/button_facebook_login_cd"/>

            <Button
                android:id="@+id/button_google"
                style="@style/ButtonStyle.Primary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/google_style"
                android:drawableStart="@drawable/google_icon"
                android:paddingStart="20dip"
                android:paddingEnd="20dip"
                android:text="@string/text_signup_google"
                android:contentDescription="@string/button_google_login_cd"
                android:textColor="#90000000" />

            <TextView
                android:id="@+id/text_or"
                style="@style/TextAppearance.Small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:layout_marginBottom="@dimen/spacing_md"
                android:gravity="center"
                android:importantForAccessibility="no"
                android:text="@string/text_or" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/empty_space" />

            <Button
                android:id="@+id/login_button_submit"
                style="@style/ButtonStyle.Primary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:text="@string/login_button"
                android:contentDescription="@string/login_button_submit_cd"/>

            <Button
                android:id="@+id/forgot_password_button"
                style="@style/ButtonStyle.Secondary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_button"
                android:contentDescription="@string/forgot_password_button_cd"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>