<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FragmentBackground"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/report_form"
            style="@style/ScrollViewChild"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewCallEndHeader"
                style="@style/TextAppearance.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_md"
                android:text="@string/call_end_header" />

            <TextView
                android:id="@+id/textViewCallEndBody"
                style="@style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/call_end_body"
                android:textSize="16sp" />


            <include layout="@layout/empty_space" />

            <Button
                android:id="@+id/button_bvi_report"
                style="@style/ButtonStyle.Secondary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:contentDescription="@string/cd_bvi_report"
                android:text="@string/button_bvi_report" />

            <Button
                android:id="@+id/button_bvi_done"
                style="@style/ButtonStyle.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_bvi_done"
                android:text="@string/button_bvi_done" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>