<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/preference_textview_background"
    android:paddingTop="13dp"
    android:layout_marginTop="10dp"
    android:paddingBottom="13dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_version_cd"
        android:layout_gravity="start"/>
    <TextView
        android:text="@string/version_number"
        android:layout_marginEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"/>
</FrameLayout>