<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/FragmentBackground"

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/email_login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/ScrollViewChild">

            <Button
                android:id="@+id/button_facebook"
                android:layout_width="fill_parent"
                android:drawableStart="@drawable/facebook_icon"
                android:paddingStart="20dip"
                android:paddingEnd="20dip"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_xsm"
                android:text="@string/text_signup_facebook"
                android:background="@drawable/facebook_style"
                style="@style/ButtonStyle.Primary" />

            <Button
                android:id="@+id/button_google"
                android:layout_width="fill_parent"
                android:drawableStart="@drawable/google_icon"
                android:layout_height="wrap_content"
                android:paddingStart="20dip"
                android:paddingEnd="20dip"
                android:textColor="#90000000"
                android:text="@string/text_signup_google"
                android:background="@drawable/google_style"
                style="@style/ButtonStyle.Primary" />

            <TextView
                android:gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:text="@string/text_or"
                style="@style/TextAppearance.Small" />

            <EditText
                android:id="@+id/edit_text_fname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="first_name"
                android:hint="@string/hint_fname"
                android:inputType="textCapSentences"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/edit_text_lname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="last_name"
                android:hint="@string/hint_lname"
                android:inputType="textCapSentences"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="email"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:imeOptions="actionGo"
                tools:targetApi="o" />

            <Button
                android:id="@+id/button_register_submit"
                style="@style/ButtonStyle.Primary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:text="@string/button_register_submit" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <!-- TODO: IndicatorView!!, Facebook&Google button styles -->
</RelativeLayout>