<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/donationbackground"
    tools:context=".donation.paypalmain">

    <TextView
        android:id="@+id/lblDonate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="124dp"
        android:text="@string/lblHowManyYouWantToDonateRM"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDonate"
        style="@style/ButtonStyle.Primary"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:text="@string/btnDonate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDonate" />

    <EditText
        android:id="@+id/txtDonate"
        android:layout_width="252dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hintPleaseEnterAmountToDonate"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAmountDonateRadioButton" />

    <RadioGroup
        android:id="@+id/radioGroupAmountDonateRadioButton"
        android:layout_width="252dp"
        android:layout_height="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDonate">

        <RadioButton
            android:id="@+id/radRM1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radRM1" />

        <RadioButton
            android:id="@+id/radRM2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radRM2" />

        <RadioButton
            android:id="@+id/radRM5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radRM5" />

        <RadioButton
            android:id="@+id/radRM10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radRM10" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>