<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FragmentBackground">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            style="@style/ScrollViewChild">

            <ImageView
                android:id="@+id/image_verify_email"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_md"
                android:layout_marginBottom="@dimen/spacing_md"
                android:maxHeight="150.0dip"
                app:srcCompat="@drawable/ic_email"
                android:contentDescription="@string/image_closed_email"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"/>

            <TextView
                android:id="@+id/text_verify_email"
                style="@style/TextAppearance.Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="@string/text_verify_email"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_check_email"
                style="@style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/text_check_email"
                android:textColor="@color/colorGrey" />

            <TextView
                android:id="@+id/text_check_email_instructions"
                style="@style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/text_check_email_instructions"
                android:textColor="@color/colorGrey"/>

            <include
                layout="@layout/empty_space" />

            <Button
                android:id="@+id/resend_email_button_submit"
                style="@style/ButtonStyle.Secondary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_sm"
                android:text="@string/button_verify_resend" />

            <Button
                android:id="@+id/confirm_email_button_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_verify"
                style="@style/ButtonStyle.Primary" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>